<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/settings_group_title_1">
    <CheckBoxPreference
        android:key="pref_notification_toggle"
        android:title="@string/settings_title_1"
        android:defaultValue="true" />
    <ListPreference
        android:key="pref_notification_frequency"
        android:title="@string/settings_title_2"
        android:dialogTitle="@string/settings_2_dialog_title"
        android:entries="@array/settings_2_entries"
        android:entryValues="@array/settings_2_values"
        android:defaultValue="@string/settings_2_default_Value" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_group_title_2">
    <com.thrive.westm10.thrive.DialogExPreference
        android:title="@string/settings_title_3"
        android:dialogTitle="@string/settings_title_3"
        android:dialogMessage="@string/settings_message_3"
        android:positiveButtonText="@string/settings_positive_button"
        android:negativeButtonText="@null"/>
    <com.thrive.westm10.thrive.DialogExPreference
        android:title="@string/settings_title_4"
        android:dialogTitle="@string/settings_title_4"
        android:dialogMessage="@string/settings_message_4"
        android:positiveButtonText="@string/settings_positive_button"
        android:negativeButtonText="@null" />
    <com.thrive.westm10.thrive.DialogExPreference
        android:title="@string/settings_title_5"
        android:dialogTitle="@string/settings_title_5"
        android:dialogMessage="@string/settings_message_5"
        android:positiveButtonText="@string/settings_positive_button"
        android:negativeButtonText="@null" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_group_title_3">
    <Preference android:title="@string/settings_title_6"
        android:summary="@string/settings_summary_6">
    </Preference>
    <Preference android:title="@string/settings_title_7"
        android:summary="@string/settings_summary_7">
    </Preference>
        <com.thrive.westm10.thrive.OpenSourcePreference
            android:title="@string/settings_title_8"
            android:dialogTitle="@string/settings_title_8"
            android:dialogMessage="@string/settings_message_8"
            android:positiveButtonText="@string/settings_positive_button"
            android:negativeButtonText="@null" />
    </PreferenceCategory>

</PreferenceScreen>